# Dionysus-Purple

./: README.md  disco_l475_iot1.overlay  progress.md
MQTT_Server/: README.md  mqtt_image_receiver.py  mqtt_image_store_and_forward.py
Milestone/Sensors/: Sensors.md
Milestone/block_diagrams/: README.md
Milestone/dikw_pyramid_abstraction/: Abstraction.md
Milestone/kpis/: kpis.md
Milestone/project_description/: README.md
Milestone/wireless_network_comms/: wireless_comm_architecture.md
Project/Disco_L475/: CMakeLists.txt  prj.conf
Project/Disco_L475/src/: main.c
Project/ESP32_CAM/: CMakeLists.txt
Project/ESP32_CAM/boards/: esp32_devkitc_wroom.overlay
Project/ESP32_CAM/src/: main.c
Project/ESP32_DK/: CMakeLists.txt  prj.conf
Project/ESP32_DK/src/: main.c
Project/ESP32_EYE/: CMakeLists.txt  Kconfig  prj.conf
Project/ESP32_EYE/boards/: esp32s3_eye_procpu.conf  esp32s3_eye_procpu.overlay
Project/ESP32_EYE/src/: main.c
Project/M5_Core2/: CMakeLists.txt  prj.conf
Project/M5_Core2/socs/: m5stack_core2.overlay
Project/M5_Core2/src/: main.c
Project/MQTT_Server/: mqtt_image_sender.py
Project/PC/: client.py  ibeacon.py  imagesocket.py  server.py
Project/Thingy52/: CMakeLists.txt  prj.conf
Project/Thingy52/boards/: thingy52_nrf52832.overlay
Project/Thingy52/src/: main.c
Project/gesture_recognition/: classify.py  predict.py  prep_img.py
Project/nRF52840_DK/: prj.conf
Project/nRF52840_DK/src/: main.c
